add api for adding rating
