# first_project/app/Http/Controllers/RatingController.php
@@ -4,6 +4,8 @@ namespace App\Http\Controllers;
 
 use App\Services\Classes\RatingService;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Validator;
+
 
 class RatingController extends Controller
 {
@@ -55,5 +57,82 @@ class RatingController extends Controller
     {
         $ratings = $this->ratingService->getProductRatings($request, $number, $product_id);
         return response()->json(['ratings' => $ratings], 200);
+    }
+
+    /**
+     * @OA\Post(
+     *       path="/ratings/addRating/{product_id}",
+     *       summary="add new Rating",
+     *       tags={"Ratings"},
+     * @OA\Parameter(
+     *            name="product_id",
+     *            in="path",
+     *            required=true,
+     *            description="Product id",
+     *            @OA\Schema(
+     *                type="integer"
+     *            )
+     *        ),
+     * @OA\RequestBody(
+     *           required=true,
+     *           @OA\JsonContent(
+     *               required={"rating_value", "comment"},
+     *      @OA\Property(
+     *                   property="rating_value",
+     *                   type="float",
+     *                   example="4.7"
+     *               ),
+     *      @OA\Property(
+     *                    property="comment",
+     *                     type="string",
+     *                     example="vary good!"
+     *                ),
+     *     )
+     * ),
+     * @OA\Response(
+     *        response=201, description="Successful added",
+     *         @OA\JsonContent(
+     *               @OA\Property(
+     *                   property="message",
+     *                   type="string",
+     *                   example="rating added seccessfully"
+     *               ),
+     *               @OA\Property(
+     *                    property="rating",
+     *                    type="string",
+     *                     example="[]"
+     *                ),
+     *           )
+     *       ),
+     *       @OA\Response(response=400, description="Invalid request"),
+     *       security={
+     *            {"bearer": {}}
+     *        }
+     *     )
+     */
+    public function addRating(Request $request, $product_id)
+    {
+        if($this->ratingService->getUserRating($product_id))
+        {
+            return response()->json(['message' => 'You have already rated this product'], 400);
+        }
+        $validatedData = validator::make($request->all(), [
+            'rating_value' => 'required | numeric | between:1,5',
+            'comment' => 'required | string'
+        ]);
+
+        if ($validatedData->fails()) {
+            return response()->json([
+                'message' => 'Validation failed',
+                'errors' => $validatedData->errors(),
+            ], 400);
+        }
+        $validatedData = $validatedData->validated();
+        $data = $this->ratingService->addRating($validatedData,$product_id);
+
+        return response()->json([
+            'message' => 'rating added successfully',
+            'rating' => $data
+        ], 201);
     }
 }
