# first_project/routes/api.php
@@ -63,4 +63,8 @@ Route::get('categories', [CategoryController::class, 'getCategories']);
 
 Route::group(['prefix' => 'ratings'], function () {
     Route::get('/showProductRatings/{number}/{product_id}', [RatingController::class, 'showProductRatings']);
+
+    Route::group(['middleware' => 'auth:api'], function () {
+        Route::post('/addRating/{product_id}', [RatingController::class, 'addRating']);
+    });
 });
