# first_project/storage/api-docs/api-docs.json
@@ -623,6 +623,81 @@
                 }
             }
         },
+        "/ratings/addRating/{product_id}": {
+            "post": {
+                "tags": [
+                    "Ratings"
+                ],
+                "summary": "add new Rating",
+                "operationId": "ced0e19dfe20f70e357f22d901a00d1c",
+                "parameters": [
+                    {
+                        "name": "product_id",
+                        "in": "path",
+                        "description": "Product id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "rating_value",
+                                    "comment"
+                                ],
+                                "properties": {
+                                    "rating_value": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": "4.7"
+                                    },
+                                    "comment": {
+                                        "type": "string",
+                                        "example": "vary good!"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful added",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "rating added seccessfully"
+                                        },
+                                        "rating": {
+                                            "type": "string",
+                                            "example": "[]"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
         "/users/register": {
             "post": {
                 "tags": [
